# cpp-spaceinvader

./: .gitignore  README.md
src/: .clang-format  CMakeLists.txt  Space Invader.cpp  Space Invader.h  SpaceInvader.cpp  SpaceInvader.h
src/cmake/: Findglew.cmake  Findglfw3.cmake
src/structs/: buffer.cpp  game.cpp  sprite.cpp
src/utils/: colors_transform.cpp  colors_transform.h
